--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     container_name: postgres_db
     image: postgres
     restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
     volumes:
       - ./data:/data/db
     ports: 
@@ -13,7 +16,7 @@ services:
     build: .
     image: task_management_api
     restart: always
-    command: npm start
+    command: npm run start:prod
     volumes:
       - ./dist:/usr/task_management_api/dist
       - ./package.json:/usr/task_management_api/package.json
