--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
  "*.ts": [
-  "eslint 'src/**' --fix --max-warnings 0 .",
+  "eslint 'src/**' --fix --max-warnings 0 ",
   "npm run test:staged"
  ]
 }
